--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "formik": "^2.4.6",
     "next": "15.3.2",
     "next-auth": "^4.24.11",
+    "nextjs-progressbar": "^0.0.16",
+    "nprogress": "^0.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
